@@ -47,16 +47,23 @@ public abstract class ExtendedFilter
     protected final IFilter originalFilter;
     private final int maxResults;
     private final boolean maxIsColumns;
+    private final boolean isPaging;
 
-    public static ExtendedFilter create(ColumnFamilyStore cfs, IFilter filter, List<IndexExpression> clause, int maxResults, boolean maxIsColumns)
+    public static ExtendedFilter create(ColumnFamilyStore cfs, IFilter filter, List<IndexExpression> clause, int maxResults, boolean maxIsColumns, boolean isPaging)
     {
         if (clause == null || clause.isEmpty())
-            return new EmptyClauseFilter(cfs, filter, maxResults, maxIsColumns);
+        {
+            return new EmptyClauseFilter(cfs, filter, maxResults, maxIsColumns, isPaging);
+        }
         else
+        {
+            if (isPaging)
+                throw new IllegalArgumentException("Cross-row paging is not supported along with index clauses");
             return new FilterWithClauses(cfs, filter, clause, maxResults, maxIsColumns);
+        }
     }
 
-    protected ExtendedFilter(ColumnFamilyStore cfs, IFilter filter, int maxResults, boolean maxIsColumns)
+    protected ExtendedFilter(ColumnFamilyStore cfs, IFilter filter, int maxResults, boolean maxIsColumns, boolean isPaging)
     {
         assert cfs != null;
         assert filter != null;
@@ -64,8 +71,11 @@ public abstract class ExtendedFilter
         this.originalFilter = filter;
         this.maxResults = maxResults;
         this.maxIsColumns = maxIsColumns;
+        this.isPaging = isPaging;
         if (maxIsColumns)
             originalFilter.updateColumnsLimit(maxResults);
+        if (isPaging && (!(originalFilter instanceof SliceQueryFilter) || ((SliceQueryFilter)originalFilter).finish.remaining() != 0))
+            throw new IllegalArgumentException("Cross-row paging is only supported for SliceQueryFilter having an empty finish column");
     }
 
     public int maxRows()
@@ -82,12 +92,16 @@ public abstract class ExtendedFilter
      * Update the filter if necessary given the number of column already
      * fetched.
      */
-    public void updateColumnsLimit(int columnsCount)
+    public void updateFilter(int currentColumnsCount)
     {
+        // As soon as we'd done our first call, we want to reset the start column if we're paging
+        if (isPaging)
+            ((SliceQueryFilter)initialFilter()).start = ByteBufferUtil.EMPTY_BYTE_BUFFER;
+
         if (!maxIsColumns)
             return;
 
-        int remaining = maxResults - columnsCount;
+        int remaining = maxResults - currentColumnsCount;
         initialFilter().updateColumnsLimit(remaining);
     }
 
@@ -140,7 +154,7 @@ public abstract class ExtendedFilter
 
         public FilterWithClauses(ColumnFamilyStore cfs, IFilter filter, List<IndexExpression> clause, int maxResults, boolean maxIsColumns)
         {
-            super(cfs, filter, maxResults, maxIsColumns);
+            super(cfs, filter, maxResults, maxIsColumns, false);
             assert clause != null;
             this.clause = clause;
             this.initialFilter = computeInitialFilter();
@@ -265,9 +279,9 @@ public abstract class ExtendedFilter
 
     private static class EmptyClauseFilter extends ExtendedFilter
     {
-        public EmptyClauseFilter(ColumnFamilyStore cfs, IFilter filter, int maxResults, boolean maxIsColumns)
+        public EmptyClauseFilter(ColumnFamilyStore cfs, IFilter filter, int maxResults, boolean maxIsColumns, boolean isPaging)
         {
-            super(cfs, filter, maxResults, maxIsColumns);
+            super(cfs, filter, maxResults, maxIsColumns, isPaging);
         }
 
         public IFilter initialFilter()
